# rust-web-study

./: Cargo.toml  README.md
src/: application.toml  bean.rs  custom_error.rs  env_config.rs  load_config.rs  log_tool.rs  main.rs  my_error.rs  web_error_demo.rs  web_index.rs  web_map.rs  web_redis.rs  web_redis_mobc.rs
