[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# http - web
actix-web = "4.0.1"
json = "0.12"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# log4rs
#log4rs = "1.0.0"

# redis
actix = "0.12"
actix-redis = "0.11.0"

# mobc_redis  : https://docs.rs/mobc-redis/0.5.1/mobc_redis/trait.AsyncCommands.html
mobc-redis = "0.7.0"

# custom error : https://mattgathu.github.io/2020/04/16/actix-web-error-handling.html
derive_more = "0.99.17"

# base64 unbase64
base64 = "0.13.0"

# zip unzip
flate2 = "1.0.22"